deploy/subscription/subscription-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: subscription
  namespace: dev
spec:
  replicas: 4
  selector:
    matchLabels:
      app: subscription
  template:
    metadata:
      labels:
        app: subscription
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: subscriptiond
        image: quay.io/repository/brice/metrics-demo:v4-subscription-service  
        command:
        - ./subscription
        - --port=3000
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
